--- a/index.html
+++ b/index.html
@@ -73,28 +73,33 @@
         <!-- Gallery Item 1 -->
         <div class="gallery-item">
             <img src="image1.jpg" alt="Generated Image 1">
-            <a href="link1.com">Link to Image 1</a>
+            <a href="https://greggelong.github.io/infiniteStreet/">infinite Urban Palimpsest</a>
         </div>
         <!-- Gallery Item 2 -->
         <div class="gallery-item">
             <img src="image2.jpg" alt="Generated Image 2">
-            <a href="link2.com">Link to Image 2</a>
+            <a href="https://greggelong.github.io/infiniteDoors/">Infinite Doors</a>
         </div>
         <!-- Gallery Item 3 -->
         <div class="gallery-item">
             <img src="image3.jpg" alt="Generated Image 3">
-            <a href="link3.com">Link to Image 3</a>
+            <a href="https://greggelong.github.io/infiniteHotel/">Infinite Hotel Artist Residency</a>
         </div>
         <!-- Gallery Item 4 -->
         <div class="gallery-item">
             <img src="image4.jpg" alt="Generated Image 4">
-            <a href="link4.com">Link to Image 4</a>
+            <a href="https://greggelong.github.io/infiniteBusyBoard/">Infinite Busy Board</a>
         </div>
         <!-- Gallery Item 5 -->
         <div class="gallery-item">
             <img src="image5.jpg" alt="Generated Image 5">
-            <a href="link5.com">Link to Image 5</a>
+            <a href="https://greggelong.github.io/aiDidi/">Infinite Taxi</a>
         </div>
+                <!-- Gallery Item 6 -->
+                <div class="gallery-item">
+                    <img src="image5.jpg" alt="Generated Image 5">
+                    <a href="https://greggelong.github.io/aiDidi/">Infinite Taxi</a>
+                </div>
     </div>
 
 </body>
