--- a/index.html
+++ b/index.html
@@ -73,32 +73,32 @@
         <!-- Gallery Item 1 -->
         <div class="gallery-item">
             <img src="image1.jpg" alt="Generated Image 1">
-            <a href="https://greggelong.github.io/infiniteStreet/">infinite Urban Palimpsest</a>
+            <a href="https://greggelong.github.io/infiniteStreet/" target="_blank" rel="noopener noreferrer">infinite Urban Palimpsest</a>
         </div>
         <!-- Gallery Item 2 -->
         <div class="gallery-item">
             <img src="image2.jpg" alt="Generated Image 2">
-            <a href="https://greggelong.github.io/infiniteDoors/">Infinite Doors</a>
+            <a href="https://greggelong.github.io/infiniteDoors/" target="_blank" rel="noopener noreferrer">Infinite Doors</a>
         </div>
         <!-- Gallery Item 3 -->
         <div class="gallery-item">
             <img src="image3.jpg" alt="Generated Image 3">
-            <a href="https://greggelong.github.io/infiniteHotel/">Infinite Hotel Artist Residency</a>
+            <a href="https://greggelong.github.io/infiniteHotel/" target="_blank" rel="noopener noreferrer">Infinite Hotel Artist Residency</a>
         </div>
         <!-- Gallery Item 4 -->
         <div class="gallery-item">
             <img src="image4.jpg" alt="Generated Image 4">
-            <a href="https://greggelong.github.io/infiniteBusyBoard/">Infinite Busy Board</a>
+            <a href="https://greggelong.github.io/infiniteBusyBoard/" target="_blank" rel="noopener noreferrer">Infinite Busy Board</a>
         </div>
         <!-- Gallery Item 5 -->
         <div class="gallery-item">
             <img src="image5.jpg" alt="Generated Image 5">
-            <a href="https://greggelong.github.io/aiDidi/">Infinite Taxi</a>
+            <a href="https://greggelong.github.io/aiDidi/" target="_blank" rel="noopener noreferrer">Infinite Taxi</a>
         </div>
                 <!-- Gallery Item 6 -->
                 <div class="gallery-item">
                     <img src="image5.jpg" alt="Generated Image 5">
-                    <a href="https://greggelong.github.io/aiDidi/">Infinite Taxi</a>
+                    <a href="https://greggelong.github.io/latlong/" target="_blank" rel="noopener noreferrer">Infinite worksite</a>
                 </div>
     </div>
 
