--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="gallery">
         <!-- Gallery Item 1 -->
         <div class="gallery-item">
-            <img src="image1.jpg" alt="Generated Image 1">
+            <img src="image1.jpg" alt="https://image.pollinations.ai/prompt/an%20infinte%20overlapping%20street%20scene%20%20from%20a%20big%20city%20in%20the%20future%20with%20may%20streets%20together%20like%20a%20fractal?width=600&height=400&nologo=true&seed=333">
             <a href="https://greggelong.github.io/infiniteStreet/" target="_blank" rel="noopener noreferrer">infinite Urban Palimpsest</a>
         </div>
         <!-- Gallery Item 2 -->
