--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="gallery">
         <!-- Gallery Item 1 -->
         <div class="gallery-item">
-            <img src="https://greggelong.gihub.io/infiniteSpaces/busyboard.jfif" alt="hotel image">
+            <img src="https://greggelong.gihub.io/infiniteSpaces/busyboard.jpg" alt="hotel image">
             <a href="https://greggelong.github.io/infiniteStreet/" target="_blank" rel="noopener noreferrer">infinite Urban Palimpsest</a>
         </div>
         <!-- Gallery Item 2 -->
