--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="gallery">
         <!-- Gallery Item 1 -->
         <div class="gallery-item">
-            <img src="https://greggelong.gihub.io/infiniteSpaces/busyboard.jpg" alt="hotel image">
+            <img src="https://greggelong.github.io/hotel/d4s.jpg" alt="hotel image">
             <a href="https://greggelong.github.io/infiniteStreet/" target="_blank" rel="noopener noreferrer">infinite Urban Palimpsest</a>
         </div>
         <!-- Gallery Item 2 -->
@@ -87,7 +87,7 @@
         </div>
         <!-- Gallery Item 4 -->
         <div class="gallery-item">
-            <img src="image4.jpg" alt="Generated Image 4">
+            <img src="https://greggelong.github.io/infiniteSpaces/busyboard.jpg" alt="hotel image">" alt="Generated Image 4">
             <a href="https://greggelong.github.io/infiniteBusyBoard/" target="_blank" rel="noopener noreferrer">Infinite Busy Board</a>
         </div>
         <!-- Gallery Item 5 -->
